Added plugin.json to Wox.Putty.Plugin.csproj as content file with Copy Always

--- a/Wox.Plugin.Putty/Wox.Plugin.Putty.csproj
+++ b/Wox.Plugin.Putty/Wox.Plugin.Putty.csproj
@@ -59,6 +59,10 @@
     <Compile Include="PuttySessionService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\plugin.json">
+      <Link>plugin.json</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
